--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -38,7 +38,7 @@ on-run-start:
 # using the `{{ config(...) }}` macro.
 
 models:
-  my_new_project:
-    # Applies to all files under models/example/
-    example:
-      +materialized: table
+  # my_new_project:
+  #   # Applies to all files under models/example/
+  #   example:
+  #     +materialized: table
