--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -25,7 +25,7 @@ clean-targets:         # directories to be removed by `dbt clean`
   - "dbt_packages"
 
 on-run-start:
-  - "{{ create_raw_all_tables() }}"
+  - "{{ create_all_raw_tables() }}"
 
 # Configuring models
 # Full documentation: https://docs.getdbt.com/docs/configuring-models
