--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -2,7 +2,7 @@
 # Name your project! Project names should contain only lowercase characters
 # and underscores. A good package name should reflect your organization's
 # name or the intended use of these models
-name: 'my_new_project'
+name: 'healthcare_project'
 version: '1.0.0'
 config-version: 2
 
@@ -38,7 +38,14 @@ on-run-start:
 # using the `{{ config(...) }}` macro.
 
 models:
-  # my_new_project:
-  #   # Applies to all files under models/example/
-  #   example:
-  #     +materialized: table
+  healthcare_project:
+    raw:
+      +schema: raw
+    monitoring:
+      +schema: monitoring
+    profiling:  
+      +schema: profiling
+    marts:
+      +schema: marts
+    staging:
+      +schema: staging
