--- a/packages.yml
+++ b/packages.yml
@@ -1,3 +1,5 @@
 packages:
   - package: calogica/dbt_expectations
     version: [">=0.8.0", "<1.0.0"]
+  - package: data-mie/dbt_profiler
+    version: [">=0.8.0", "<1.0.0"]
