--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -26,6 +26,8 @@ clean-targets:         # directories to be removed by `dbt clean`
 
 on-run-start:
   - "{{ create_all_raw_tables() }}"
+  - "{{ load_all_raw_tables_incremental() }}"
+
 
 # Configuring models
 # Full documentation: https://docs.getdbt.com/docs/configuring-models
